# suumo_analysis

./: .gitignore  README.md  main.py  pyproject.toml
__marimo__/session/: notebook.py.json
data/temp/: station_times.csv
notebook/: notebook.py
notebook/__marimo__/session/: notebook.py.json
src/: analyzer.py  cleaner.py  scraper.py  station_info.py  visualizer.py
