[project]
name = "suumo-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "beautifulsoup4>=4.14.3",
    "marimo>=0.20.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "retry>=0.9.2",
]
